--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "start": "node app.js"
   },
   "dependencies": {
+    "async": "^3.2.0",
     "bcrypt": "^4.0.1",
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
