--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "boilerplate-nodejs",
+  "mail_name": "Boilerplate NodeJS",
   "version": "0.0.1",
   "description": "Template for NodeJS/ExpressJs projects for backend development",
   "main": "app.js",
@@ -26,7 +27,7 @@
     "nodemailer": "^6.4.2",
     "redis": "^3.0.2",
     "socket.io": "^2.3.0",
-    "uuid": "^3.4.0"
+    "uuid": "^8.0.0"
   },
   "devDependencies": {
     "chai": "^4.2.0",
