--- a/package.json
+++ b/package.json
@@ -3,30 +3,31 @@
   "mail_name": "Boilerplate NodeJS",
   "version": "0.0.1",
   "description": "Template for NodeJS/ExpressJs projects for backend development",
-  "main": "app.js",
+  "main": "index.js",
   "repository": "https://github.com/nferocious76/NodeJSBoilerPlate.git",
   "author": "Neil Francis Ramirez Hipona <nferocious76@gmail.com>",
   "license": "MIT",
   "license-url": "https://github.com/nferocious76/NodeJSBoilerPlate/blob/master/LICENSE",
   "scripts": {
-    "test": "mocha --timeout 150000 --reporter mochawesome",
-    "start": "node app.js"
+    "test": "mocha --timeout 150000 --reporter mochawesome"
   },
   "dependencies": {
+    "@socket.io/redis-adapter": "^7.0.0",
     "async": "^3.2.0",
-    "bcrypt": "^5.0.0",
-    "dotenv": "^8.2.0",
+    "bcrypt": "^5.0.1",
+    "cluster": "^0.7.7",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "fs": "^0.0.1-security",
     "https": "^1.0.0",
     "jsonwebtoken": "^8.5.1",
-    "morgan": "^1.9.1",
+    "morgan": "^1.10.0",
     "multer": "^1.4.2",
     "node-mysql": "^0.4.2",
     "nodemailer": "^6.4.2",
-    "redis": "^3.0.2",
-    "socket.io": "^2.3.0",
-    "uuid": "^8.0.0"
+    "redis": "^3.1.2",
+    "socket.io": "^4.1.2",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "chai": "^4.2.0",
