--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@socket.io/redis-adapter": "^7.0.0",
     "async": "^3.2.0",
+    "aws-sdk": "^2.943.0",
     "bcrypt": "^5.0.1",
     "cluster": "^0.7.7",
     "dotenv": "^10.0.0",
